<resources>
    <string name="app_name">CleanChain Driver</string>
    <string name="title_activity_maps">Map</string>

    <string name="signin">Sign in</string>
    <string name="email">Email (Optinal)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>

    <string name="name">Your Name</string>
    <string name="mobile">Mobile (05XXXXXXXX)</string>


    <string name="placeorder">Place Order</string>
    <string name="myorder">My Orders</string>
    <string name="myaccount">My Account</string>

    <string name="confrimaddress">Confirm Address</string>
    <string name="yourlocation">Your Location:</string>
    <string name="detials">Detials:</string>
    <string name="submitorder">Submit Order</string>
    <string name="detilashints">More Detials (ex: description: 2 Blankets, Time to pick up ..etc)</string>


    <string name="ordersuccessed">Your order has been placed</string>
    <string name="ordernumber">Order Number:</string>
    <string name="thankyou">Thank you</string>
    <string name="contactsoon">We will contact you shortly</string>


    <string name="status">Status:</string>
    <string name="totalprice">Total Price:</string>
    <string name="notes">Detials:</string>


    <string name="myprofil">My Profile</string>
    <string name="name2">Name:</string>
    <string name="email2">Email:</string>
    <string name="mobile2">Mobile:</string>
    <string name="update">Update</string>
    <string name="changepassword">Change Password</string>
    <string name="logout">Log out</string>


    <string name="changepasswordtitle">Change Your Password:</string>
    <string name="newpassword">New Password</string>
    <string name="repassword">Re-type new password</string>
    <string name="change">Change</string>


    <string name="settings">Settings</string>
    <string name="aboutus">About CleanChain</string>
    <string name="prices">Prices - Terms and Conditions</string>
    <string name="changelanguage">Change Language</string>
    <string name="msgLanguage">To Change language, please change your device language</string>


    <string name="MainActivity">Home</string>
    <string name="MapActivity">Specifying your address</string>
    <string name="MyOrderActivity">My orders</string>
    <string name="MyAccountActivity">My Account</string>
    <string name="PasswordActivity">Change Password</string>
    <string name="SettingsActivity">Settings</string>
    <string name="OrderActivity">Submit Order</string>
    <string name="SummaryActivity">Order Information</string>
    <string name="AboutActivity">About CleanChain</string>
    <string name="PricesActivity">Terms and Conditions</string>


    <string name="msgMap">Please Activate location permission from Setting - Apps - CleanChain - Permissions - Location</string>


</resources>
