<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/orderIDLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordernumber"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/orderDateView"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/statusView"
            android:layout_width="158dp"
            android:layout_height="24dp"
            android:text="TextView"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/orderPriceLabel"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/statusLabel"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/notesText"
            android:layout_width="259dp"
            android:layout_height="36dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:inputType="textMultiLine"
            android:text="No Detials"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notesView"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/orderPriceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalprice"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/orderIDLabel"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/orderDateView"
            android:layout_width="106dp"
            android:layout_height="14dp"
            android:text="TextView"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/orderIDView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="15dp"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/orderIDLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderDateView"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/orderPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="13dp"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/orderPriceLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderIDLabel"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/notesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="12sp"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/statusView"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textAlignment="textStart"
            android:textSize="12sp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/orderPriceLabel"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/displayOrderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/orange_button"
            android:text="Display Order"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notesText" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>